--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,13 +4,17 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "composite": true,
+    "declaration": true,     // ✅ Emit .d.ts files
+    "emitDeclarationOnly": true,
+
 
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
+
 
     /* Linting */
     "strict": true,
